Backend/prometheus/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: cvalyze
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          args:
            - "--config.file=/etc/prometheus/prometheus.yml"
            - "--storage.tsdb.path=/prometheus"
            - "--web.enable-lifecycle"
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: "250m"      # 0.5 vCPU baseline
              memory: "1Gi"    # 1 GB RAM for active metrics
            limits:
              cpu: "500m"     # 1 vCPU for query bursts
              memory: "2Gi"    # 2 GB RAM for caching and larger TSDB sets
          volumeMounts:
            - name: prometheus-config-vol
              mountPath: /etc/prometheus/
            - name: prometheus-data
              mountPath: /prometheus
      volumes:
        - name: prometheus-config-vol
          configMap:
            name: prometheus-config
        - name: prometheus-data
          emptyDir: {}
