Backend/prometheus/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: cvalyze
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  ports:
    - name: http
      port: 9090
      targetPort: 9090
  type: ClusterIP
